chore: add Rojo config and import project structure

--- a/default.project.json
+++ b/default.project.json
@@ -1,7 +1,11 @@
 {
+  "$schema": "https://rojo.space/schema.json",
   "name": "DungeonCrawler",
   "servePort": 34865,
-  "ignore": ["\\.git$", "node_modules"],
+  "globIgnorePaths": [
+    "**/.git/**",
+    "**/node_modules/**"
+  ],
   "tree": {
     "$className": "DataModel",
     "ReplicatedStorage": { "$path": "src/ReplicatedStorage" },
