--- a/default.project.json
+++ b/default.project.json
@@ -2,17 +2,28 @@
   "$schema": "https://rojo.space/schema.json",
   "name": "DungeonCrawler",
   "servePort": 34865,
-  "globIgnorePaths": [
-    "**/.git/**",
-    "**/node_modules/**"
-  ],
   "tree": {
     "$className": "DataModel",
-    "ReplicatedStorage": { "$path": "src/ReplicatedStorage" },
-    "ServerScriptService": { "$path": "src/ServerScriptService" },
-    "StarterGui":          { "$path": "src/StarterGui" },
+    "ServerScriptService": {
+      "$path": "src/ServerScriptService"
+    },
+    "ReplicatedStorage": {
+      "$path": "src/ReplicatedStorage"
+    },
+    "ServerStorage": {
+      "$path": "src/ServerStorage"
+    },
+    "Workspace": {
+      "$path": "src/Workspace"
+    },
     "StarterPlayer": {
-      "StarterPlayerScripts": { "$path": "src/StarterPlayer/StarterPlayerScripts" }
+      "$className": "StarterPlayer",
+      "StarterPlayerScripts": {
+        "$path": "src/StarterPlayer/StarterPlayerScripts"
+      },
+      "StarterCharacterScripts": {
+        "$path": "src/StarterPlayer/StarterCharacterScripts"
+      }
     }
   }
 }
